# pico-scripts

./: .gitignore  LICENSE  README.md
c/blink_led/blink/: blink.c
c/char_lcd/CharLCD-Test/: CMakeLists.txt  CharLCD-Test.c  pico_keypad4x4.c
python/: 7_segment_display.py  i2c_test.py  led_test.py  photo_sensor.py  temperature_test.py
python/lcd/: 16x2_lcd.py  clear_lcd.py
python/test/: base64_test.py  index.html  joystick_test.py  lcd_wifi_display.py  led_bar_graph.py  led_bar_graph_new.py  matrix_keypad.py  micro_sd_test.py  password_gen.py  ping_test.py  potentiometer_test.py  rfid_read_new.py  rfid_read_old.py  secrets_example.py  serial_connection.py  webserver_test.py  webserver_test_old.py  wifi_connect.py  wifi_secrets_example.py
python/test/leds/: 4_digit_display.py  7_segment_test.py  7_segment_test1.py  freenove_test.py  led_bar_graph.py  leds_test1.py  rgb_led.py
python/test/web_requests/: get_http.py
python/test/wifi/: lcd_wifi_display.py  ping_test.py  webserver_test.py  webserver_test_old.py  wifi_connect.py  wifi_mac_address.py
